--- a/src/main/resources/templates/front/swift/views/listContentView.mustache
+++ b/src/main/resources/templates/front/swift/views/listContentView.mustache
@@ -17,7 +17,7 @@ struct {{entity}}ListContentView: View {
             ScrollView {
                 LazyVStack(spacing: 0) {
                     {{entity}}IndicatorView(
-                        title: "Indicators",
+                        title: "",
                         indicators: [
                           {{#fields}}
                                 {{#indicators}}
