--- a/src/main/resources/templates/front/swift/entityStatus.mustache
+++ b/src/main/resources/templates/front/swift/entityStatus.mustache
@@ -7,4 +7,5 @@ enum {{entity}}Status: String, Codable {
     case sync = "SYNC"
     case syncing = "SYNCING"
     case failed = "FAILED"
+    case trash = "TRASH"
 }
